Actualized to latest Gradle/Kotlin version