@@ -1,5 +1,6 @@
 package demo.java;
 
+import static demo.java.Functions.println;
 
 import java.util.Arrays;
 import java.util.Objects;
@@ -8,22 +9,21 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.ForkJoinPool;
 
-import static demo.java.Functions.println;
-
 public class NoCoroutines {
     public static void main(String[] args) throws InterruptedException {
         WeatherService weatherService = new WeatherService();
 
         ExecutorService executor = new ForkJoinPool();
         Arrays.asList("Brussels", "Miami", "Moscow", "London")
-                .forEach(l ->
-                        executor.execute(() ->
-                                printWeather(weatherService, l)));
+            .forEach(l ->
+                executor.execute(() ->
+                    printWeather(weatherService, l)));
         Thread.sleep(2000);
     }
 
     private static void printWeather(WeatherService weatherService, String location) {
         long start = System.currentTimeMillis();
+        println("Requesting weather for %s".formatted(location));
         Weather weather;
         try {
             weather = weatherService.weatherFor(location).get();
@@ -31,16 +31,22 @@ public class NoCoroutines {
             throw new RuntimeException(e);
         }
         long duration = System.currentTimeMillis() - start;
-        println(String.format("%s: %s (%s ms)", location, weather, duration));
+        println("%s: %s (%s ms)".formatted(location, weather, duration));
     }
 
     private static class WeatherService {
         CompletableFuture<Weather> weatherFor(String location) {
             return CompletableFuture.supplyAsync(() -> {
-                sleep((long) new Random().nextInt(2000));
-                if (Objects.equals(location, "Miami")) return Weather.SUNNY;
-                if (Objects.equals(location, "Brussels")) return Weather.RAIN;
-                if (Objects.equals(location, "Moscow")) return Weather.SNOW;
+                sleep(new Random().nextInt(2000));
+                if (Objects.equals(location, "Miami")) {
+                    return Weather.SUNNY;
+                }
+                if (Objects.equals(location, "Brussels")) {
+                    return Weather.RAIN;
+                }
+                if (Objects.equals(location, "Moscow")) {
+                    return Weather.SNOW;
+                }
                 return Weather.CLOUDED;
             });
         }
@@ -55,6 +61,9 @@ public class NoCoroutines {
     }
 
     private enum Weather {
-        SUNNY, CLOUDED, RAIN, SNOW
+        SUNNY,
+        CLOUDED,
+        RAIN,
+        SNOW
     }
 }
